# My-Mansion

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: compilacion-linux-cmake.yml  compilacion-web-cmake.yml  compilacion-web.yml  compilacion.yml
assets/: dummy.txt
include/: scene_manager.h  transition_circle.h
include/core/: game.h  scene_manager.h
include/effects/: transition_circle.h
include/scenes/: scene_menu.h  scene_select.h  scene_settings.h
include/ui/: menu.h
src/: main.c
src/core/: game.c  scene_manager.c
src/effects/: transition_circle.c
src/scenes/: scene_menu.c  scene_select.c  scene_settings.c
src/ui/: menu.c
